# ml_learning

./: .gitignore  parameters.txt  pyproject.toml  test.py  weights.pt
gpt/: gpt.ipynb
makemore/: bichar_model.ipynb  bichar_nn.ipynb  bichar_nn_p2.ipynb  bichar_nn_p3.ipynb  bichar_nn_p4.ipynb  nn_model.py  nn_model2.py  parameters.txt  runner.py
micrograd/: graph  vgrad.py  vnet.py
