[project]
name = "ml-study"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.21",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "seaborn>=0.13.2",
    "torch>=2.13.0",
    "tqdm>=4.69.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
